Some info for the buttons

--- a/index.html
+++ b/index.html
@@ -3,6 +3,14 @@
     <head>
         <meta charset="UTF-8">
         <title>Click Counter</title>
-        <link rel="stylesheet" href="style.css"
+        <link rel="stylesheet" href="style.css">
     </head>
+    <body>
+        <div class="container">
+            <h1>Click Counter</h1>
+            <p id="count">0</p>
+            <button id="clickBtn">Click me!</button>
+            <button id="resetBtn">Reset button!</button>
+        </div>
+    </body>
 </html>
