--- a/index.html
+++ b/index.html
@@ -12,5 +12,7 @@
             <button id="clickBtn">Click me!</button>
             <button id="resetBtn">Reset button!</button>
         </div>
+
+        <script src="script.js"></script>
     </body>
 </html>
